# CubicUniverse

./: .gitignore  Makefile  README.md  compile.sh  meson.build  meson_options.txt
appdata/chunks/: 0.0.chunk
assets/chunks/: -2.-2.chunk  0.0.chunk
assets/gamefiles/: block-list.cubic
assets/shaders/: axes_F.shader  block_F.shader  block_V.shader  block_cubic_F.shader  block_cubic_G.shader  block_cubic_V.shader  block_custom_F.shader  block_custom_V.shader  cube_F.shader  default_F.shader  default_V.shader  lines_V.shader  skybox_V.shader
block/: block.c  block.h  block_list_loader.c  block_list_loader.h  block_utils.c  block_utils.h  blockstates.c  blockstates.h
chunk/: chunk.c  chunk.h  chunk_loader.c  chunk_loader.h  chunk_renderer.c  chunk_renderer.h  chunk_utils.c  chunk_utils.h
game/: Makefile  game  game.c  game.h  main.c
graphics/: Makefile  cube.c  draw_triangle.c  draw_triangle.h  main.c  open_gl.c  open_gl.h  shader.c  shader.h
old/: cube.c  cube.h  cube_V.shader  main.c
physics/: physics_utils.c  physics_utils.h
render/: axes.c  axes.h  block.c  block.h  block_list_loader.c  block_list_loader.h  block_utils.c  block_utils.h  blockstates.c  blockstates.h  camera.c  camera.h  chunk.c  chunk.h  chunk_loader.c  chunk_loader.h  chunk_utils.h  line_renderer.c  line_renderer.h  open_gl.c  open_gl.h  shader.c  shader.h  skybox.c  skybox.h  texture_atlas.c  texture_atlas.h  window.c  window.h
src/: cubic_universe.c  meson.build
src/block/: block.c  block.h  block_list_loader.c  block_list_loader.h  block_renderer.c  block_renderer.h  block_utils.c  block_utils.h  blockstates.c  blockstates.h  meson.build
src/chunk/: chunk.c  chunk.h  chunk_loader.c  chunk_loader.h  chunk_renderer.c  chunk_renderer.h  chunk_utils.c  chunk_utils.h  meson.build
src/file_system/: fs.c  fs.h  meson.build
src/game/: game.c  game.h  meson.build
src/generation/: heightmaps.c  heightmaps.h  meson.build  noise.c  noise.h
src/input/: meson.build
src/physics/: meson.build
src/render/: axes.c  axes.h  camera.c  camera.h  line_renderer.c  line_renderer.h  meson.build  open_gl.c  open_gl.h  shader.c  shader.h  skybox.c  skybox.h  texture_atlas.c  texture_atlas.h  window.c  window.h
src/utils/: meson.build  utils.c  utils.h
src/utils/data_struct/: graph_marker.c  hashmap.c  hashmap.h  list.c  list.h  matrix.c  matrix.h  queue.c  queue.h  vector.c  vector.h
src/utils/types/: block.h  chunk.h  open_gl.h  physics_utils.c  physics_utils.h  texture.h
struct/: block.c  block.h  chunk.h
tests/: Makefile  main.c  meson.build  test_hashmap.c  test_hashmap.h  test_list.c  test_list.h  test_matrix.c  test_matrix.h  test_queue.c  test_queue.h
utils/: graph_marker.c  graph_marker.h  hashmap.c  hashmap.h  list.c  list.h  matrix.c  matrix.h  open_gl.c  open_gl.h  queue.c  queue.h  shader.c  shader.h  utils.c  utils.h  vector.c  vector.h  window.c  window.h
